cargo-features = ["codegen-backend"]

[package]
name = "some_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
leptos = { version = "0.6.5", default-features = false, features = ["serde"] }
wasm-bindgen = "0.2"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["time"] }
some_lib = { path = "../some_lib" }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
